tdf#112769 Don't multi-trigger AllEventsProcessed

User events processing - as all event processing - can be nested,
which can cause TriggerAllUserEventsProcessed to be called multiple
times, when a nested event loops ends.

So track TriggerAllUserEventsProcessed calls and just reset, if
a new event was inserted.

Change-Id: I4a1b1b08901c99a7ece08f8baf008c8bb73506bf
Reviewed-on: https://gerrit.libreoffice.org/43043
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>